# mini-claw-code

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
prompts/: bash.txt  system_prompt.txt  todowrite.txt
