[project]
name = "mini-claw-code"
version = "0.1.0"
description = "Educational absolute minimum clone of Claude Code - just 2 tools: Bash + TodoWrite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.11",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]
